--- a/style.css
+++ b/style.css
@@ -32,6 +32,30 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  background-color: #260A03;
+}
+
+/* Navbar links */
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  font-family: 'Major Mono Display', monospace;
+    /* font-family rule copied from Google Fonts */
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+/* Change color + highlight on hover. */
+#navbar a:hover {
+  color: hotpink;
+  background-color: white;
+}
+
 div.stuff {
   width: 250px;
   /* height: fit-content; */
@@ -44,6 +68,18 @@ div.stuff {
   float: left;
   margin: 10px;
   padding: 5px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
 }
 
 div#first {
